# statistical-analysis

./: 1_basic_analysis.ipynb  2_pca.ipynb  3_cluster.ipynb  README.md  exam_analysis.ipynb  pyproject.toml  statistical-analysis.code-workspace
.devcontainer/: devcontainer.json
data/: baseball.csv  customerData.txt  exams.csv  seiseki.csv
